--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -4,33 +4,40 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-  <display-name></display-name>	
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+	
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.paul.sertest.servlet.LoginServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/api/login</url-pattern>
+	</servlet-mapping>
   
+  	<filter>
+	  	<filter-name>CorsFilter</filter-name>
+	  	<filter-class>com.paul.sertest.filter.CorsFilter</filter-class>
+  	</filter>
   
-  <filter>
-  	<filter-name>SignFilter</filter-name>
-  	<filter-class>com.paul.sertest.filter.SignFilter</filter-class>
-  	<init-param>
-  		<param-name>encoding</param-name>
-  		<param-value>utf-8</param-value>
-  	</init-param>
-  </filter>
+  	<filter-mapping>
+	  	<filter-name>CorsFilter</filter-name>
+	  	<url-pattern>/api/*</url-pattern>
+  	</filter-mapping>
+  	
+  	<filter>
+	  	<filter-name>SignFilter</filter-name>
+	  	<filter-class>com.paul.sertest.filter.SignFilter</filter-class>
+	  	<init-param>
+	  		<param-name>encoding</param-name>
+	  		<param-value>utf-8</param-value>
+	  	</init-param>
+  	</filter>
   
-  <filter-mapping>
-  	<filter-name>SignFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
+  	<filter-mapping>
+	  	<filter-name>SignFilter</filter-name>
+	  	<url-pattern>/api/check/*</url-pattern>
+	  	<url-pattern>/api/bussin/*</url-pattern>
+  	</filter-mapping>
   
-  <filter>
-  	<filter-name>CorsFilter</filter-name>
-  	<filter-class>com.paul.sertest.filter.CorsFilter</filter-class>
-  </filter>
-  
-  <filter-mapping>
-  	<filter-name>CorsFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
 </web-app>
